# Kaggle-Google

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements-adk.txt  requirements.txt
data/: resources.json
docs/: deployment_cloud_run.md  kaggle_writeup.md  security_model.md  video_script.md
evals/: cases.json
scripts/: demo_request.py  run_evals.py
skills/followup_plan/: SKILL.md
skills/intake_safety/: SKILL.md
skills/resource_matching/: SKILL.md
src/care_compass/: __init__.py  adk_app.py  agents.py  catalog.py  cli.py  evaluation.py  gemini.py  mcp_fastmcp.py  mcp_server.py  models.py  orchestrator.py  security.py  skills.py  tools.py  web.py
tests/: test_gemini.py  test_orchestrator.py  test_security.py  test_web.py
