[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "care-compass-agent"
version = "0.1.0"
description = "A privacy-first multi-agent routing assistant for Monash student support resources in Australia."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "CareCompass Agent contributors"}]
dependencies = []

[project.optional-dependencies]
adk = ["google-adk", "mcp"]
dev = []

[project.scripts]
care-compass = "care_compass.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
